--- a/app/app.css
+++ b/app/app.css
@@ -4,7 +4,7 @@
   --font-sans: "Inter", ui-sans-serif, system-ui, sans-serif,
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
-
+/* 
 html,
 body {
   @apply bg-white dark:bg-gray-950;
@@ -12,4 +12,14 @@ body {
   @media (prefers-color-scheme: dark) {
     color-scheme: dark;
   }
+} */
+
+.login{
+  @apply flex items-center justify-center bg-gray-100 w-3xs;
+}
+
+button {
+    position: relative;
+    cursor: pointer;
+    z-index: 1000;  /* Assure-toi qu'il est au-dessus des autres éléments */
 }
