--- a/app/app.css
+++ b/app/app.css
@@ -23,3 +23,19 @@ button {
     cursor: pointer;
     z-index: 1000;  /* Assure-toi qu'il est au-dessus des autres éléments */
 }
+
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #f4f7fb;
+}
+
+h1 {
+  font-size: 2rem;
+  color: #333;
+  text-align: center;
+  margin-top: 40px;
+  margin-bottom: 20px;
+  font-weight: 600;
+}
