--- a/app/components/ProductListComponent/ProductListComponent.css
+++ b/app/components/ProductListComponent/ProductListComponent.css
@@ -30,10 +30,11 @@
 }
 
 .product-card-image {
-  width: 100%;
-  height: 200px;
-  object-fit: cover;
   border-bottom: 1px solid #ddd;
+  width: 200px;
+  height: 200px;
+  margin: 0 auto;
+  padding: 12px;
 }
 
 .product-card-details {
