--- a/app/components/ProductListComponent/ProductListComponent.css
+++ b/app/components/ProductListComponent/ProductListComponent.css
@@ -18,16 +18,17 @@ text-decoration: none;
 color: inherit;
 box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
 transition: transform 0.2s ease;
-height: 20rem;
+height: 27rem;
 }
 
-.product-card:hover {
-transform: translateY(-8px);
-}
+/*.product-card:hover {*/
+/*transform: translateY(-8px);*/
+/*}*/
 
 .product-card-link {
 display: block;
 text-align: center;
+
 }
 
 .product-card-image {
